# amxmodx-discord-api

./: .gitignore  CMakeLists.txt  README.md  build_libs.sh  build_libs_test.sh  libs_builder.sh
.github/workflows/: dev-ci-cd.yaml  dev-ci.yaml  dev-docker-cache-workflow.yaml  main-ci-cd.yaml
amxmodx/configs/: discord_bot.cfg
amxmodx/scripting/: chat_relay.sma  discord_bot.sma  discordbot.amxx  discordbot.sma  online_players_category.sma
amxmodx/scripting/include/: discordapi.inc  discordapibot.inc  discordapibotchannels.inc  discordapibotguilds.inc  discordapichannels.inc  discordapiconsts.inc  discordapiguilds.inc  discordapiutils.inc  discordbot.inc
docker-images/debian12/: Dockerfile  build.sh  build_container.ps1  build_libs.ps1  build_project.ps1  run.sh
docker-images/debian12-i386/: Dockerfile
docker-images/ubuntu18/: Dockerfile
src/: amx_forwards.cpp  amx_forwards.h  amx_natives.cpp  amx_natives.h  common.h  discord_bot.cpp  discord_bot.h  discord_bot_options.h  discord_bot_slash_command.h  discord_bots_manager.cpp  discord_bots_manager.h  dllmain.cpp  dllmain.h  events_queue.cpp  events_queue.h  hooks.cpp  precompiled.h
src/amxx/: amx_forwards.cpp  amx_forwards.h  amx_natives.cpp  pending_amx_object_store.h  pending_amx_object_store_impl.cpp  pending_amx_object_store_impl.h
src/amxx/natives/: bot.cpp  bot.h  channels.cpp  channels.h  guilds.cpp  guilds.h  module.cpp  module.h
src/console_commands/: concmds.cpp  concmds.h  console_command.h
src/console_variables/: cvars.cpp  cvars.h
src/discord_bot/: discord_bot.cpp  discord_bot.h  discord_bot_options.h  discord_bots_manager.cpp  discord_bots_manager.h  discord_bots_manager_impl.cpp  discord_bots_manager_impl.h
src/discord_bot/event_handlers/: guilds_events_handler.cpp  log_event_handler.cpp  log_event_handler.h  messages_events_handler.cpp  ready_event_handler.cpp
src/event_handlers/: guild_events_handler.cpp  guild_events_handler.h  guilds_events_handler.cpp  guilds_events_handler.h  log_event_handler.cpp  messages_events_handler.cpp  messages_events_handler.h  ready_event_handler.cpp  ready_event_handler.h
src/metamod/: dllapi.cpp  engine_api.cpp  h_export.cpp  hooks.cpp  hooks.h  meta_api.cpp
src/mpsc/: events_queue.cpp  events_queue.h  queue.h
src/natives/: bot.cpp  bot.h  channels.cpp  channels.h  guilds.cpp  guilds.h
src/utils/: parse_discord_bot_options.h  singleton.h
